kustomize/org-services/common/manifest-base/namespace1.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: namespace1
  labels:
    argocd.argoproj.io/managed-by: openshift-gitops
