kustomize/org-services/common/manifest-base/base-deploymentorg.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: REPLACE_ME
  name: REPLACE_ME
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: REPLACE_ME
      deploymentconfig: REPLACE_ME
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: REPLACE_ME
        deploymentconfig: REPLACE_ME
    spec:
      containers:
      - envFrom:
        - configMapRef:
            name: apm-enable
        - secretRef:
            name: apm-secret
        - configMapRef:
            name: servicelogging
        - configMapRef:
            name: endpoints-common
        - configMapRef:
            name: REPLACE_ME
        image: quay.io/tkhussein/php-hello:v4.0.1
        imagePullPolicy: Always
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: self
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 2
        name: REPLACE_ME
        ports:
        - containerPort: 8080
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: ready
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 15
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
