kustomize/org-services/common/manifest-base/base-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: REPLACE_ME
  name: REPLACE_ME
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    deploymentconfig: REPLACE_ME
  sessionAffinity: None
  type: ClusterIP
