kustomize/org-services/common/manifest-base/base-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
  labels:
    app: REPLACE_ME
  name: REPLACE_ME
spec:
  port:
    targetPort: 8080-tcp
  tls:
    insecureEdgeTerminationPolicy: Allow
    termination: edge
  to:
    kind: Service
    name: REPLACE_ME
    weight: 100
  wildcardPolicy: None
